# Oval

./: .gitignore  CLAUDE.md  README.md  oval-player-architect.md
.guardian/: config.json
.oracle/: drift-prevention.md  platform-gotchas.md  project-intent.md  shader-design.md  sprint-1-state.md  texture-vision.md  video-pipeline.md  visual-identity.md
design/: ARCHITECTURE.md
oval-player/: Cargo.toml
oval-player/src/: app.rs  main.rs
oval-player/src/shaders/: oval.wgsl
research/: MOJO_EVAL.md  OBJC2_WINIT_INTEROP.md  UI_DESIGN.md  VIDEO_TECH.md  WINDOW_SYSTEM.md
